Personalised HTML content

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                height="60px"
                alt=""
             />
-            <h1 id="profile-name">Jessica Randall</h1>
-            <p>London, United Kingdom</p>
+            <h1 id="profile-name">Ben Darko Appiagyei</h1>
+            <p>Kumasi, Ghana</p>
          </div>
 
          <p class="profile-sections profile-summary">
